# pairup.c

./: .gitignore  CMakeLists.txt  Makefile  README.md  compile_commands.json  create_graph_png.sh  data.csv  get_today_google_sheet.sh  main  pairup
lib/: getopt.c  portable_wcwidth.h  rw-csv.c  rw-csv.h
src/: main.c  version.h.in
src/api/: libpairup.c  libpairup.h
src/pairup/: pairup-algorithm.c  pairup-algorithm.h  pairup-formatter.c  pairup-formatter.h  pairup-types.c  pairup-types.h  pairup.h
